# MFTIndexer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_and_run.bat
MFTIndexer/: MFTIndexer.cpp  MFTIndexer.h  MFTIndexer.sln  MFTIndexer.vcxproj  MFTIndexer.vcxproj.filters  cpp.hint  main.cpp
MFTIndexer/MFTIndexer/x64/Debug/: MFTIndexer.dll.recipe  MFTIndexer.exe.recipe  MFTIndexer.ilk  vc143.idb
MFTIndexer/MFTIndexer/x64/Debug/MFTIndexer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MFTIndexer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MFTIndexer/x64/Debug/: MFTIndexer.exp
MFTIndexerCLI/: Program.cs
